--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,18 +1,19 @@
 # todo: добавить контейнер postgres
-# services:
-#   postgres:
-#     image: postgres:14.10-alpine
-#     ports:
-#       - "5432:5432"
-#     environment:
-#       POSTGRES_USER: postgres
-#       POSTGRES_PASSWORD: postgres
-#       POSTGRES_HOST_AUTH_METHOD: trust
-#     volumes:
-#       - pgdata:/var/lib/postgresql/data  
+services:
+  postgres:
+    image: postgres:14.10-alpine
+    container_name: personal_account_api
+    ports:
+      - "5432:5432"
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_HOST_AUTH_METHOD: trust
+    volumes:
+      - pgdata:/var/lib/postgresql/data  
 
-# volumes:
-#   pgdata:
+volumes:
+  pgdata:
 
 # скачать pgAdmin
 
