--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,8 +1,17 @@
-# todo: добавить контейнер postgres
 services:
+
+  api-gateway:
+    container_name: personal_account_api
+    build: ./cmd
+    ports:
+      - "8080:8080"  
+    depends_on:
+      postgres:
+        condition: service_healthy
+        
   postgres:
     image: postgres:14.10-alpine
-    container_name: personal_account_api
+    container_name: postgres
     ports:
       - "5432:5432"
     environment:
@@ -10,7 +19,12 @@ services:
       POSTGRES_PASSWORD: postgres
       POSTGRES_HOST_AUTH_METHOD: trust
     volumes:
-      - pgdata:/var/lib/postgresql/data  
+      - pgdata:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      timeout: 10s
+      retries: 5
 
 volumes:
   pgdata:
