--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,8 +1,7 @@
 services:
 
   api-gateway:
-    container_name: personal_account_api
-    build: ./cmd
+    build: ./
     ports:
       - "8080:8080"  
     depends_on:
@@ -11,7 +10,6 @@ services:
         
   postgres:
     image: postgres:14.10-alpine
-    container_name: postgres
     ports:
       - "5432:5432"
     environment:
@@ -29,7 +27,6 @@ services:
 volumes:
   pgdata:
 
-# скачать pgAdmin
 
 # Запустить
 # docker compose build
