--- a/DockerFile
+++ b/DockerFile
@@ -14,5 +14,6 @@ FROM alpine:latest
 
 WORKDIR /app
 COPY --from=builder /app/api-gateway .
+COPY ./cmd/config.yaml /app/cmd/config.yaml
 
 ENTRYPOINT ["./api-gateway"]
