--- a/prometheus.yml
+++ b/prometheus.yml
@@ -2,6 +2,6 @@ global:
   scrape_interval: 15s
 
 scrape_configs:
-  - job_name: 'golang-app'
+  - job_name: 'api-gateway'
     static_configs:
-      - targets: ['golang-app:8080']
+      - targets: ['api-gateway:8080']
