--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,12 +8,11 @@ services:
   
   grafana:
     image: grafana/grafana
-    environment:
-      - GF_SECURITY_ADMIN_PASSWORD=admin
     ports:
       - "3000:3000"
     volumes:
-      - ./datasources.yaml:/etc/grafana/provisioning/datasources/datasources.yaml
+      - ./dashboards:/etc/grafana/dashboards
+      - ./provisioning:/etc/grafana/provisioning
     depends_on:
       - prometheus
   
